# ReddcBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.MD  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt
src/: config.py
src/bot/: config.py
src/bot/filters/: __init__.py
src/bot/handlers/: __init__.py  admin.py  user.py
src/bot/handlers/admins/: __init__.py  messages.py
src/bot/handlers/admins/dialogs/: core.py  post.py
src/bot/handlers/admins/dialogs/funcs/: __init__.py
src/bot/handlers/admins/dialogs/funcs/post/: __init__.py  hacknews.py  lemmy.py  lobster.py  mastodon.py  reddit.py  yt.py
src/bot/handlers/user/: messages.py
src/bot/misc/: states.py
src/bot/web/reddit/: api.py  core.py
src/web/lobster/: core.py
src/web/reddit/: api.py  core.py
tests/api_tests/: test_reddit.py
